fix issues and update campus controller